--- a/summary/baselines_wmt14_enfr.html
+++ b/summary/baselines_wmt14_enfr.html
@@ -92,6 +92,15 @@
       <td><a>No</a></td>
     </tr>
     <tr>
+      <td><a href="https://arxiv.org/pdf/1901.11117.pdf">The Evolved Transformer</a> <a>[bib]</a></td>
+      <td>The evolved Transformer</td>
+      <td>6</td>
+      <td>1024</td>
+      <td>Bilingual data</td>
+      <td>41.3</td>
+      <td>No</td>
+    </tr>
+    <tr>
       <td><a href="https://arxiv.org/pdf/1705.03122.pdf">CNN network</a> <a>[bib]</a></td>
       <td>CNN</td>
       <td>15</td>
